# ML2DSegmentation

./: .gitignore  CMakeLists.txt  compile.sh  compile_python.sh  test_main.cpp
include/: ML2DSegmentationInterface.h
src/: ML2DSegmentationInterface.cpp
sv_ml/: sv_wrapper.py
sv_ml/config/: TWO_STREAM.yaml
sv_ml/modules/: gvf_image.py  io.py
